@@ -1,5 +1,7 @@
 Revision history for Perl extension Catalyst::Plugin::Authentication
 
+      - Add a username_field config item to ::Credential::Remote
+        (Nigel Metheringham)
       - Die with a useful error message if we are about to try to restore
         a user from a realm which does not exist. (t0m)
 
